# aes256gcm

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
inc/aes256gcm/: aes256gcm.hpp  cli.hpp  decrypter.hpp  encrypter.hpp  pbkdf2.hpp  proprietary.hpp  secure_string.hpp  verifier.hpp  version.hpp
lib/aes256gcm/: constants.hpp  decrypter.cpp  encrypter.cpp  openssl_error.cpp  pbkdf2.cpp  secure_string.cpp  verifier.cpp  version.cpp.in
lib/aes256gcm/cli/: context.cpp  decrypt.cpp  encrypt.cpp  print_info.cpp  print_usage.cpp  run.cpp  verify.cpp
lib/aes256gcm/proprietary/: decrypt_file.cpp  decrypt_file_inplace.cpp  decrypt_file_tostream.cpp  encrypt_file.cpp  encrypt_file_inplace.cpp  encrypt_file_tostream.cpp  encryption_info.cpp  encryption_info.hpp  get_encryption_info.cpp  memmapped_file.cpp  memmapped_file.hpp  verify_file.cpp
src/: main.cpp
test-src/: test_cli.cpp  test_pbkdf2.cpp  test_secure_string.cpp  test_xcrypt.cpp  test_xcrypt_file.cpp
